--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,5 @@
 # https://www.playframework.com/documentation/latest/Configuration
 play.http.secret.key="O/5pVhmewoZTz_vKlIAZJ;R4fP18OfX_hG3tlFMRtIUhR@huabYiuW7C`[iztP<`"
-
+play.filters.hosts {
+  allowed = ["."]
+}
